# Copyright 2025 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[package]
authors = ["Max Gubin <mgubin@google.com>"]
build = "build/build.rs"
name = "google-ai-edge-litert"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/google-ai-edge/LiteRT/"

# If enabled, the runtime will be build using Docker, otherwise
# a prebuild binary for the target platform will be downloaded.
[features]
build_runtime_with_docker = []

[lib]
name = "litert"
path = "src/lib.rs"

[build-dependencies]
bindgen = "*"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
anyhow = "1.0" # For easy error handling in build script
build-print = "1"
